# tinySQL

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
src/: engine.cpp  engine.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  table.cpp  table.h  tokenizer.cpp  tokenizer.h
tests/: test_engine.cpp  test_parser.cpp  test_tokenizer.cpp
